--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
         android:layout_marginStart="60dp"
         android:layout_marginTop="200dp"
         android:onClick="onCellClick"
-        android:text="\u003F"
+        android:text="@string/emptyCell"
         app:cornerRadius="5dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,7 +30,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="00dp"
         android:onClick="onCellClick"
-        android:text="\u003F"
+        android:text="@string/emptyCell"
         app:cornerRadius="5dp"
         app:layout_constraintStart_toStartOf="@id/button00"
         app:layout_constraintTop_toTopOf="@id/button00" />
@@ -53,7 +53,7 @@
         android:layout_marginStart="00dp"
         android:layout_marginTop="100dp"
         android:onClick="onCellClick"
-        android:text="\u003F"
+        android:text="@string/emptyCell"
         app:cornerRadius="5dp"
         app:layout_constraintStart_toStartOf="@id/button00"
         app:layout_constraintTop_toTopOf="@id/button00" />
@@ -64,7 +64,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="100dp"
         android:onClick="onCellClick"
-        android:text="\u003F"
+        android:text="@string/emptyCell"
         app:cornerRadius="5dp"
         app:layout_constraintStart_toStartOf="@id/button00"
         app:layout_constraintTop_toTopOf="@id/button00" />
@@ -75,7 +75,7 @@
         android:layout_marginStart="200dp"
         android:layout_marginTop="100dp"
         android:onClick="onCellClick"
-        android:text="\u003F"
+        android:text="@string/emptyCell"
         app:cornerRadius="5dp"
         app:layout_constraintStart_toStartOf="@id/button00"
         app:layout_constraintTop_toTopOf="@id/button00" />
@@ -86,7 +86,7 @@
         android:layout_marginStart="000dp"
         android:layout_marginTop="200dp"
         android:onClick="onCellClick"
-        android:text="\u003F"
+        android:text="@string/emptyCell"
         app:cornerRadius="5dp"
         app:layout_constraintStart_toStartOf="@id/button00"
         app:layout_constraintTop_toTopOf="@id/button00" />
@@ -97,7 +97,7 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="200dp"
         android:onClick="onCellClick"
-        android:text="\u003F"
+        android:text="@string/emptyCell"
         app:cornerRadius="5dp"
         app:layout_constraintStart_toStartOf="@id/button00"
         app:layout_constraintTop_toTopOf="@id/button00" />
@@ -108,7 +108,7 @@
         android:layout_marginStart="200dp"
         android:layout_marginTop="200dp"
         android:onClick="onCellClick"
-        android:text="\u003F"
+        android:text="@string/emptyCell"
         app:cornerRadius="5dp"
         app:layout_constraintStart_toStartOf="@id/button00"
         app:layout_constraintTop_toTopOf="@id/button00" />
@@ -120,25 +120,26 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-100dp"
         android:background="@null"
-        android:backgroundTint="@color/pale_red"
+        android:backgroundTint="@color/light_grey"
         android:textColor="@color/white"
         android:minWidth="300dip"
         android:minHeight="50dip"
         android:enabled="false"
-        android:onClick="opponentTurn"
-        android:text="Seeking opponent..."
+        android:onClick="opponentTurnReceived"
+        android:text="@string/seeking_opponent"
         app:cornerRadius="5dp"
         app:layout_constraintStart_toStartOf="@id/button00"
         app:layout_constraintTop_toTopOf="@id/button00" />
 
     <Button
         android:id="@+id/buttonStart"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="350dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginTop="500dp"
         android:background="@null"
         android:backgroundTint="#148CBD"
+        android:enabled="false"
         android:insetLeft="0dp"
         android:insetTop="0dp"
         android:insetRight="0dp"
@@ -146,13 +147,12 @@
         android:onClick="startGame"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
-        android:text="start"
+        android:text="connect"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:enabled="false"
         app:layout_constraintStart_toStartOf="@id/button00"
         app:layout_constraintTop_toTopOf="@id/button00" />
 
