--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -13,130 +14,179 @@
     tools:layout_editor_absoluteY="0dp"
     tools:visibility="visible">
 
+    <!-- Guideline positioned at 5% of screen width -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_5_percent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.05" /> <!-- 5% from start -->
+
+    <!-- Guideline positioned at 30% of screen width -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_30_percent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.3" /> <!-- 5% from start -->
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline_80_percent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.75" /> <!-- 5% from start -->
+
     <Button
         android:id="@+id/button00"
         style="@style/MyButtonStyle"
-        android:layout_marginStart="60dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="100dp"
         android:onClick="onCellClick"
         android:text="@string/emptyCell"
         app:cornerRadius="5dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintStart_toStartOf="@+id/guideline_5_percent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintWidth_percent="0.3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+    /> <!-- Makes height equal to width -->
+
 
     <Button
         android:id="@+id/button10"
         style="@style/MyButtonStyle"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="00dp"
         android:onClick="onCellClick"
         android:text="@string/emptyCell"
         app:cornerRadius="5dp"
-        app:layout_constraintStart_toStartOf="@id/button00"
-        app:layout_constraintTop_toTopOf="@id/button00" />
+        app:layout_constraintStart_toEndOf="@id/button00"
+        app:layout_constraintTop_toTopOf="@id/button00"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+    />
 
     <Button
         android:id="@+id/button20"
         style="@style/MyButtonStyle"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="00dp"
         android:onClick="onCellClick"
-        android:text="\u003F"
+        android:text="@string/emptyCell"
         app:cornerRadius="5dp"
-        app:layout_constraintStart_toStartOf="@id/button00"
-        app:layout_constraintTop_toTopOf="@id/button00" />
+        app:layout_constraintStart_toEndOf="@id/button10"
+        app:layout_constraintTop_toTopOf="@id/button10"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+    />
 
 
     <Button
         android:id="@+id/button01"
         style="@style/MyButtonStyle"
-        android:layout_marginStart="00dp"
-        android:layout_marginTop="100dp"
         android:onClick="onCellClick"
         android:text="@string/emptyCell"
         app:cornerRadius="5dp"
         app:layout_constraintStart_toStartOf="@id/button00"
-        app:layout_constraintTop_toTopOf="@id/button00" />
+        app:layout_constraintTop_toBottomOf="@id/button00"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+    />
 
     <Button
         android:id="@+id/button11"
         style="@style/MyButtonStyle"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="100dp"
         android:onClick="onCellClick"
         android:text="@string/emptyCell"
         app:cornerRadius="5dp"
-        app:layout_constraintStart_toStartOf="@id/button00"
-        app:layout_constraintTop_toTopOf="@id/button00" />
+        app:layout_constraintStart_toEndOf="@id/button01"
+        app:layout_constraintTop_toTopOf="@id/button01"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+    />
 
     <Button
         android:id="@+id/button21"
         style="@style/MyButtonStyle"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="100dp"
         android:onClick="onCellClick"
         android:text="@string/emptyCell"
         app:cornerRadius="5dp"
-        app:layout_constraintStart_toStartOf="@id/button00"
-        app:layout_constraintTop_toTopOf="@id/button00" />
+        app:layout_constraintStart_toEndOf="@id/button11"
+        app:layout_constraintTop_toTopOf="@id/button11"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+    />
 
     <Button
         android:id="@+id/button02"
         style="@style/MyButtonStyle"
-        android:layout_marginStart="000dp"
-        android:layout_marginTop="200dp"
         android:onClick="onCellClick"
         android:text="@string/emptyCell"
         app:cornerRadius="5dp"
-        app:layout_constraintStart_toStartOf="@id/button00"
-        app:layout_constraintTop_toTopOf="@id/button00" />
+        app:layout_constraintStart_toStartOf="@id/button01"
+        app:layout_constraintTop_toBottomOf="@id/button01"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+    />
 
     <Button
         android:id="@+id/button12"
         style="@style/MyButtonStyle"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="200dp"
         android:onClick="onCellClick"
         android:text="@string/emptyCell"
         app:cornerRadius="5dp"
-        app:layout_constraintStart_toStartOf="@id/button00"
-        app:layout_constraintTop_toTopOf="@id/button00" />
+        app:layout_constraintStart_toEndOf="@id/button02"
+        app:layout_constraintTop_toTopOf="@id/button02"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+    />
 
     <Button
         android:id="@+id/button22"
         style="@style/MyButtonStyle"
-        android:layout_marginStart="200dp"
-        android:layout_marginTop="200dp"
         android:onClick="onCellClick"
         android:text="@string/emptyCell"
         app:cornerRadius="5dp"
-        app:layout_constraintStart_toStartOf="@id/button00"
-        app:layout_constraintTop_toTopOf="@id/button00" />
+        app:layout_constraintStart_toEndOf="@id/button12"
+        app:layout_constraintTop_toTopOf="@id/button12"
+        app:layout_constraintWidth_percent="0.3"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+    />
 
     <Button
         android:id="@+id/buttonInfo"
         style="@style/Widget.AppCompat.Button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-100dp"
+        android:layout_marginTop="-75dp"
         android:background="@null"
         android:backgroundTint="@color/light_grey"
-        android:textColor="@color/white"
-        android:minWidth="300dip"
-        android:minHeight="50dip"
         android:enabled="false"
         android:onClick="opponentTurnReceived"
         android:text="@string/seeking_opponent"
+        android:textColor="@color/white"
         app:cornerRadius="5dp"
+        app:layout_constrainedHeight="true"
         app:layout_constraintStart_toStartOf="@id/button00"
-        app:layout_constraintTop_toTopOf="@id/button00" />
+        app:layout_constraintTop_toTopOf="@id/button00"
+        app:layout_constraintWidth_min="wrap"
+        app:layout_constraintWidth_percent="0.9"
+        android:layout_height="wrap_content"
+        android:layout_width="0dp" />
 
     <Button
         android:id="@+id/buttonStart"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="500dp"
         android:background="@null"
         android:backgroundTint="#148CBD"
         android:enabled="false"
@@ -145,15 +195,18 @@
         android:insetRight="0dp"
         android:insetBottom="0dp"
         android:onClick="startGame"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:text="connect"
+        android:padding="5dp"
+        android:text="@string/connect"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@id/button00"
-        app:layout_constraintTop_toTopOf="@id/button00" />
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintStart_toStartOf="@id/guideline_30_percent"
+        app:layout_constraintTop_toTopOf="@id/guideline_80_percent"
+        app:layout_constraintWidth_percent="0.4"
+        android:layout_width="0dp"
+        android:layout_height="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
