--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,8 +8,8 @@
         <item name="android:insetTop">1dp</item>
         <item name="android:insetRight">1dp</item>
         <item name="android:insetBottom">1dp</item>
-        <item name="android:layout_width">100dp</item>
-        <item name="android:layout_height">100dp</item>
+        <!--item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">100dp</item-->
     </style>
 
 </resources>
